--- a/art.html
+++ b/art.html
@@ -12,7 +12,7 @@
 <body>
 
 	<div class="banner">
-		<img src="images/banner/banner_new.png" class="title"/>
+		<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
 
 		<nav>
 	      <li><a href="home.html">HOME</a></li>     
@@ -29,7 +29,7 @@
 	  
 	  <div class="row">
 	    <div class="col-lg-6" style="background-color:yellow;">
-	      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br>
+	      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
 	      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 	    </div>
 	    <div class="col-lg-6" style="background-color:pink;">
@@ -52,7 +52,7 @@
 		</div>
 		<div class="works-title-cover">
 			<a href="works_au.html"><img src="images/works/work_au.jpg"/>
-			<div class="works-title"><p>Audi R8 Compositing</p></div></a>
+			<div class="works-title"><p>Audi R8</p></div></a>
 		</div>
 		<div class="works-title-cover">
 			<a href="works_lb.html"><img src="images/works/work_lb.jpg"/>
