--- a/works_ac.html
+++ b/works_ac.html
@@ -12,7 +12,7 @@
 
 
   <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/><nav>
+    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a><nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
@@ -26,7 +26,7 @@
 
   <div class="works-container">
     <iframe src="https://player.vimeo.com/video/153671854?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <br>
+    <br/>
     <p>This is another short film we made during senior year in college. We planned to try some green-screen keying and compositing techniques and develop an efficient workflow. I was responsible for all the visual effects and compositing. </p>
     
   </div>
