--- a/works_ep.html
+++ b/works_ep.html
@@ -12,7 +12,7 @@
 
 
   <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/><nav>
+    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a><nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
@@ -25,7 +25,7 @@
 <div class="container">
 
   <div class="works-container">
-    <br>
+    <br/>
     <a href="https://epics.ecn.purdue.edu/lsme/"><img src="images/works/ep/epics.jpg" width="900px"></a>
 	
     <p>LSME (Learning Science and Math Through Education) works with K-12 students to help 	strengthen their Mathematics and Science skills and in turn develop an appreciation for engineering. </p>
