--- a/works_hb.html
+++ b/works_hb.html
@@ -12,7 +12,7 @@
 
 
   <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/>
+    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
 
      <nav>
 	      <li><a href="home.html">HOME</a></li>     
@@ -29,7 +29,7 @@
 
   <div class="works-container">
     <iframe src="https://player.vimeo.com/video/241428833?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <br><br>
+    <br/><br/>
     <p>This is my first 3D animation short after I learned basic character rigging. The inspiration originated from the spinoff <a href="http://theawkwardyeti.com/chapter/heart-and-brain-2/" target="_blank">Heart and Brain </a> by cartoonist Nick Seluk. I was responsible for the first scene, second scene, as well as character and environment design.</p>
       
   </div>
