--- a/works_in.html
+++ b/works_in.html
@@ -116,7 +116,7 @@ d3.csv("files\data.csv", function(error, data){
 <body>
 
   <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/><nav>
+    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a><nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
@@ -129,7 +129,7 @@ d3.csv("files\data.csv", function(error, data){
 <div class="container">
 
   <div class="works-container">
-    <br>   
+    <br/>   
     <p>Worked as a UX designer and web master in a student group from the department of ECE (aka Purdue EPICS). We designed teaching concepts of hardware and software to EPICS K-12 students by helping them build an assistive device. </p>  
   </div>
 
