--- a/works_pr.html
+++ b/works_pr.html
@@ -12,7 +12,7 @@
 
 
   <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/><nav>
+    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a><nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
@@ -25,7 +25,7 @@
 <div class="container">
 
   <div class="works-container">
-    <br>
+    <br/>
     
     <iframe src="https://player.vimeo.com/video/191842243?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>    
     <p>Every person holds a mobile territory unconsciously is called personal space. We did a research about finding different distance and individual feedback for participants in a VR world.</p>
