--- a/works_vg.html
+++ b/works_vg.html
@@ -12,7 +12,7 @@
 
 
   <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/><nav>
+    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a><nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
@@ -26,7 +26,7 @@
 
   <div class="works-container">
     <iframe src="https://player.vimeo.com/video/181273975?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <br>
+    <br/>
     <p>VIRTUAL GAME is my graduation short film at the Communication University of China in 2016. It combined live action, visual effects and motion graphics. We developed the idea from real-field AR game and integrated it with a fake artificial intelligence. I was responsible for story idea, cinematography and 3D visual effects. In a word, everything is the game is virtual! Thanks for the help from our parents, professors, schoolmates and many friends.</p>
     <ul>
       <li>Director: <a href="https://vimeo.com/user46301357" target="_blank">Frank Zhou</a></li>
