--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
 
 	<div class="banner">
-		<img src="images/banner/banner_new.png" class="title"/>
+		<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
 
 		<nav>
 	      <li><a href="home.html">HOME</a></li>     
