--- a/works_bt.html
+++ b/works_bt.html
@@ -12,7 +12,7 @@
 
 
   <div class="banner">
-    <img src="images/banner/banner_new.png" class="title"/><nav>
+    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a><nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
@@ -26,9 +26,9 @@
 
   <div class="works-container">
     <iframe src="https://player.vimeo.com/video/150784491?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <br><br>
+    <br/><br/>
     <p>This is a CG shot composited by me. We shot the footage in a green-screen studio and replaced it with a museum environment. Because I'm pursuing a fastest method to accomplish this shot, I used the BG image directly and made it slide as the dolly shot.</p>
-    <br><br>
+    <br/><br/>
     <p>Breakdown video: </p>  
     <iframe src="https://player.vimeo.com/video/151297911?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     
