--- a/works_ho.html
+++ b/works_ho.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="banner">
-	<img src="images/banner/banner_new.png" class="title"/>
+	<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
     <nav>
 	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
