--- a/works_ui.html
+++ b/works_ui.html
@@ -28,7 +28,8 @@
 
 	<div class="works-container">
 		<div id="mobile-app-img">
-			<img src="images\works\ui\ui_01.PNG"/>
+			<img src="images\works\ui\ui_01.png"/>
+            <img src="images\works\ui\ui_02.PNG"/>
 			<img src="images\works\ui\ui_03.PNG"/>
 			<img src="images\works\ui\ui_04.PNG"/>
 			<img src="images\works\ui\ui_05.PNG"/>
