--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 				<img src="images/about/pdf_icon.png" width="30" height="30" alt="PDF"/>
 			</div>
 			<div id="resume-link">
-				<a href="files/Zhang,W_Resume.pdf" target="_blank">Resume</a>
+				<a href="files/Zhang,W.pdf" target="_blank">Resume</a>
 			</div>
 		</div>
 	</div>
