--- a/art.html
+++ b/art.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" 
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
 	<title>Weny&uuml Zhang | Portfolio</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -25,60 +27,46 @@
 		</nav>   
 	</div>
 
-<!--	<div class="container">
-	  
-	  <div class="row">
-	    <div class="col-lg-6" style="background-color:yellow;">
-	      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br/>
-	      Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-	    </div>
-	    <div class="col-lg-6" style="background-color:pink;">
-	      Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
-	    </div>
-	  </div>
+	<div class="container">
+
+		<div class="works-cover">
+			<div class="works-title-cover">
+				<a href="works_ho.html"><img src="images\art\cover\work_ho.jpg"/>
+				<div class="works-title"><p>Holocene<br/><br/>(WIP)</p></div></a>
+			</div>		
+			<div class="works-title-cover">
+				<a href="works_vg.html"><img src="images\art\cover\work_vg.jpg"/>
+				<div class="works-title"><p>VIRTUAL GAME</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_au.html"><img src="images\art\cover\work_au.jpg"/>
+				<div class="works-title"><p>Audi R8</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_lb.html"><img src="images\art\cover\work_lb.jpg"/>
+				<div class="works-title"><p>Laubwerk Plant Kit Test</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_hb.html"><img src="images\art\cover\work_hb.jpg"/>
+				<div class="works-title"><p>Heart & Brain</p></div></a>
+			</div>				
+		</div>
+
 	</div>
 
--->
-<div class="container">
-
-	<div class="works-cover">
-		<div class="works-title-cover">
-			<a href="works_ho.html"><img src="images/works/work_ho.jpg"/>
-			<div class="works-title"><p>Holocene<br/><br/>(WIP)</p></div></a>
-		</div>		
-		<div class="works-title-cover">
-			<a href="works_vg.html"><img src="images/works/work_vg.jpg"/>
-			<div class="works-title"><p>VIRTUAL GAME</p></div></a>
+	<footer>
+		<p>&copy;2018 Weny&uuml Zhang | All Rights Reserved</p>
+		
+		<div class="icons">
+			<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
+			<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
+			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
+			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+			<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
 		</div>
-		<div class="works-title-cover">
-			<a href="works_au.html"><img src="images/works/work_au.jpg"/>
-			<div class="works-title"><p>Audi R8</p></div></a>
-		</div>
-		<div class="works-title-cover">
-			<a href="works_lb.html"><img src="images/works/work_lb.jpg"/>
-			<div class="works-title"><p>Laubwerk Plant Kit Test</p></div></a>
-		</div>
-		<div class="works-title-cover">
-			<a href="works_hb.html"><img src="images/works/work_hb.jpg"/>
-			<div class="works-title"><p>Heart & Brain</p></div></a>
-		</div>				
-	</div>
-
-</div>
-
-<footer>
-	<p>&copy;2018 Weny&uuml Zhang | All Rights Reserved</p>
-	
-	<div class="icons">
-		<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-		<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-		<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-		<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-		<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
-		<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-		<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
-	</div>
-</footer>
+	</footer>
 
 </body>
 </html>
