--- a/design.html
+++ b/design.html
@@ -25,41 +25,37 @@
 		</nav>   
 	</div>
 
-<div class="container">
+	<div class="container">
 
 	<div class="works-cover">		
 		<div class="works-title-cover">
-			<a href="works_ep.html"><img src="images/works/work_ep.jpg"/>
+			<a href="works_ep.html"><img src="images\design\cover\work_ep.jpg"/>
 			<div class="works-title"><p>Purdue EPICS </p></div></a>
 		</div>
 		<div class="works-title-cover">
-			<a href="works_pr.html"><img src="images/works/work_pr.jpg"/>
+			<a href="works_pr.html"><img src="image\design\cover\work_pr.jpg"/>
 			<div class="works-title"><p>Proxemics Research</p></div></a>
 		</div>
         <div class="works-title-cover">
-			<a href="works_ui.html"><img src="images/works/work_ui.jpg"/>
+			<a href="works_ui.html"><img src="images\design\cover\work_ui.jpg"/>
 			<div class="works-title"><p>App UI Design</p></div></a>
-		</div>        
-        <div class="works-title-cover">
-			<a href="design.html"><img src="images\works\blank.png" />
-			<div class="works-title"><p>This Website :)</p></div></a>
-		</div>       
+		</div>             
 	</div>
 
-</div>
+	</div>
 
-<footer>
-  <p>&copy;2018 Weny&uuml Zhang | All Rights Reserved</p>
-  <div class="icons">
-    <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-    <a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-    <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-    <a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-    <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
-    <a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-    <a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
-  </div>
-</footer>
+	<footer>
+		<p>&copy;2018 Weny&uuml Zhang | All Rights Reserved</p>
+		<div class="icons">
+			<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
+			<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
+			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
+			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+			<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
+		</div>
+	</footer>
 
 </body>
 </html>
