--- a/programming.html
+++ b/programming.html
@@ -25,39 +25,31 @@
 		</nav>   
 	</div>
 
-<div class="container">
+	<div class="container">
 
-	<div class="works-cover">	
-		<div class="works-title-cover">
-			<a href="works_ms.html"><img src="images/works/work_ms.jpg"/>
-			<div class="works-title"><p>Make Some Noise</p></div></a>
-		</div>				
+		<div class="works-cover">	
+			<div class="works-title-cover">
+				<a href="works_ms.html"><img src="images\programming\cover\work_ms.jpg"/>
+				<div class="works-title"><p>Make Some Noise</p></div></a>
+			</div>				
+		</div>
+
 	</div>
 
-</div>
 
-<!--	
-	<div class="video-gallery">
-		<iframe src="https://player.vimeo.com/video/181273975?title=0&byline=0&portrait=0" width="750" height="430" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-		<iframe src="https://player.vimeo.com/video/153671854?title=0&byline=0&portrait=0" width="750" height="430" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-		<iframe src="https://player.vimeo.com/video/214308081?title=0&byline=0&portrait=0" width="750" height="430" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-	</div>
-</div>
--->
-
-<footer>
-	<p>&copy;2018 Wenyu Zhang | All Rights Reserved</p>
-	
-	<div class="icons">
-		<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-		<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-		<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-		<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-		<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
-		<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-		<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
-	</div>
-</footer>
+	<footer>
+		<p>&copy;2018 Wenyu Zhang | All Rights Reserved</p>
+		
+		<div class="icons">
+			<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
+			<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
+			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
+			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+			<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
+		</div>
+	</footer>
 
 </body>
 </html>
