--- a/design.html
+++ b/design.html
@@ -33,7 +33,7 @@
 			<div class="works-title"><p>Purdue EPICS </p></div></a>
 		</div>
 		<div class="works-title-cover">
-			<a href="works_pr.html"><img src="image\design\cover\work_pr.jpg"/>
+			<a href="works_pr.html"><img src="images\design\cover\work_pr.jpg"/>
 			<div class="works-title"><p>Proxemics Research</p></div></a>
 		</div>
         <div class="works-title-cover">
