--- a/works_pr.html
+++ b/works_pr.html
@@ -29,9 +29,9 @@
 
     <div class="works-container">
       
-      <img src="images\images\design\pr\pr_02.jpg" width="500px">
-      <img src="images\images\design\pr\pr_03.jpg" width="900px">
-      <img src="images\images\design\pr\pr_04.jpg" width="900px">
+      <img src="images\design\pr\pr_02.jpg" width="900px">
+      <img src="images\design\pr\pr_03.jpg" width="900px">
+      <img src="images\design\pr\pr_04.jpg" width="900px">
       <br/>
       <iframe src="https://player.vimeo.com/video/191842243?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>    
       <p>Every person holds a mobile territory unconsciously is called personal space. We did a research about finding different distance and individual feedback for participants in a VR world.</p>
