--- a/art.html
+++ b/art.html
@@ -49,7 +49,11 @@
 			<div class="works-title-cover">
 				<a href="works_hb.html"><img src="images\art\cover\work_hb.jpg"/>
 				<div class="works-title"><p>Heart & Brain</p></div></a>
-			</div>				
+			</div>
+			<div class="works-title-cover">
+				<a href="works_ca.html"><img src="images\art\cover\work_ca.jpg"/>
+				<div class="works-title"><p>Crowd Simulation Test</p></div></a>
+			</div>			
 		</div>
 
 	</div>
