--- a/art.html
+++ b/art.html
@@ -53,9 +53,13 @@
 			<div class="works-title-cover">
 				<a href="works_ca.html"><img src="images\art\cover\work_ca.jpg"/>
 				<div class="works-title"><p>Crowd Simulation Test</p></div></a>
+			</div>
+			<div class="works-title-cover">
+				<a href="works_sc.html"><img src="images\art\cover\work_sc.jpg"/>
+				<div class="works-title"><p>Crowd Simulation Test</p></div></a>
 			</div>			
 		</div>
-
+	
 	</div>
 
 	<footer>
