--- a/works_sc.html
+++ b/works_sc.html
@@ -31,11 +31,11 @@
     
     <p></p>
     <div id="sc-img">
-       <img src="images/works/sc/sc_01.jpg">
-       <img src="images/works/sc/sc_02.jpg">
-       <img src="images/works/sc/sc_03.jpg">
-       <img src="images/works/sc/sc_04.jpg">
-       <img src="images/works/sc/sc_05.jpg">      
+       <img src="images\art\sc\sc_01.jpg">
+       <img src="images\art\sc\sc_02.jpg">
+       <img src="images\art\sc\sc_03.jpg">
+       <img src="images\art\sc\sc_04.jpg">
+       <img src="images\art\sc\sc_05.jpg">      
     </div>
     
   </div>
