--- a/art.html
+++ b/art.html
@@ -56,7 +56,7 @@
 			</div>
 			<div class="works-title-cover">
 				<a href="works_sc.html"><img src="images\art\cover\work_sc.jpg"/>
-				<div class="works-title"><p>Crowd Simulation Test</p></div></a>
+				<div class="works-title"><p>Strkikng Computer<br/><br/>(WIP)</p></div></a>
 			</div>			
 		</div>
 	
