--- a/works_au.html
+++ b/works_au.html
@@ -29,10 +29,10 @@
 	<div class="works-container">
     	<iframe src="https://player.vimeo.com/video/214308081?title=0&byline=0&portrait=0" width="900" height="506" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>    
         <div id="au-img">
-           <img src="images/works/au/au_01.jpg">
-           <img src="images/works/au/au_02.jpg">
-           <img src="images/works/au/au_03.jpg">
-           <img src="images/works/au/au_04.jpg">
+           <img src="images\art\au\au_01.jpg">
+           <img src="images\art\au\au_02.jpg">
+           <img src="images\art\au\au_03.jpg">
+           <img src="images\art\au\au_04.jpg">
         </div>
     	<br/><br/>
     	<p>I learned how to model an Audi R8 in Maya. I used V-Ray for texture and render. Background was made by camera projection in Maya. Also tried Autodesk VRED for real-time visualization.</p>    
