--- a/works_ep.html
+++ b/works_ep.html
@@ -26,7 +26,7 @@
 
   <div class="works-container">
     <br/>
-    <a href="https://epics.ecn.purdue.edu/lsme/"><img src="images/works/ep/epics.jpg" width="900px"></a>
+    <a href="https://epics.ecn.purdue.edu/lsme/"><img src="images/design/ep/epics.jpg" width="900px"></a>
 	
     <p>LSME (Learning Science and Math Through Education) works with K-12 students to help 	strengthen their Mathematics and Science skills and in turn develop an appreciation for engineering. </p>
     <p>Worked as a UX designer and web master in a student group from the department of ECE (aka Purdue EPICS). We designed teaching concepts of hardware and software to EPICS K-12 students by helping them build an assistive device. </p>    
