--- a/works_lb.html
+++ b/works_lb.html
@@ -27,10 +27,10 @@
 
 	<div class="works-container">
 		<div id="lb-img">
-            <img src="images/works/lb/lb_01.jpg">
-            <img src="images/works/lb/lb_02.jpg">
-            <img src="images/works/lb/lb_03.jpg">
-            <img src="images/works/lb/lb_04.jpg">     
+            <img src="images\art\lb\lb_01.jpg">
+            <img src="images\art\lb\lb_02.jpg">
+            <img src="images\art\lb\lb_03.jpg">
+            <img src="images\art\lb\lb_04.jpg">     
     </div>
     <p>I made this forest environment with Cinema 4D plus the plugin Laubwerk Plants Kits. The haze effect made by physical renderer in Cinema 4D feels pretty good.</p>   
 </div>
