--- a/works_ui.html
+++ b/works_ui.html
@@ -28,15 +28,15 @@
 
 	<div class="works-container">
 		<div id="mobile-app-img">
-			<img src="images\works\ui\ui_01.png"/>
-            <img src="images\works\ui\ui_02.PNG"/>
-			<img src="images\works\ui\ui_03.PNG"/>
-			<img src="images\works\ui\ui_04.PNG"/>
-			<img src="images\works\ui\ui_05.PNG"/>
-			<img src="images\works\ui\ui_06.PNG"/>
-			<img src="images\works\ui\ui_07.PNG"/>
-			<img src="images\works\ui\ui_08.PNG"/>
-			<img src="images\works\ui\ui_09.PNG"/>
+			<img src="images\design\ui\ui_01.png"/>
+            <img src="images\design\ui\ui_02.PNG"/>
+			<img src="images\design\ui\ui_03.PNG"/>
+			<img src="images\design\ui\ui_04.PNG"/>
+			<img src="images\design\ui\ui_05.PNG"/>
+			<img src="images\design\ui\ui_06.PNG"/>
+			<img src="images\design\ui\ui_07.PNG"/>
+			<img src="images\design\ui\ui_08.PNG"/>
+			<img src="images\design\ui\ui_09.PNG"/>
 		</div>
         <p>My mobile app design is about an alarm product for private coach. It integrates alarms with personal schedule, which is useful for a fitness coach to manage his time and students information. Design document can be found <a href="files\Wenyu_App_Design.pdf" target="_blank">here</a>.</p>    
 	</div>
