--- a/art.html
+++ b/art.html
@@ -31,9 +31,17 @@
 
 		<div class="works-cover">
 			<div class="works-title-cover">
+				<a href="works_cs.html"><img src="images\art\cs\cs_01.png"/>
+				<div class="works-title"><p>Holocene<br/><br/>(WIP)</p></div></a>
+			</div>
+			<div class="works-title-cover">
 				<a href="works_ho.html"><img src="images\art\cover\work_ho.jpg"/>
 				<div class="works-title"><p>Holocene<br/><br/>(WIP)</p></div></a>
-			</div>		
+			</div>
+			<div class="works-title-cover">
+				<a href="works_sc.html"><img src="images\art\cover\work_sc.jpg"/>
+				<div class="works-title"><p>Strkikng Computer<br/><br/>(WIP)</p></div></a>
+			</div>	
 			<div class="works-title-cover">
 				<a href="works_vg.html"><img src="images\art\cover\work_vg.jpg"/>
 				<div class="works-title"><p>VIRTUAL GAME</p></div></a>
