--- a/works_cs.html
+++ b/works_cs.html
@@ -28,8 +28,8 @@
 <div class="container">
 
 	<div class="works-container">  
-    	<img src="images\art\cs\cs_01.jpg" width="900px">
-    	<img src="images\art\cs\cs_02.jpg" width="900px">
+    	<img src="images\art\cs\cs_01.png" width="900px">
+    	<img src="images\art\cs\cs_02.png" width="900px">
         <img src="images\art\cs\cs_03.png" width="900px">
         <img src="images\art\cs\cs_04.png" width="900px">
     	<img src="images\art\cs\cs_05.png" width="900px">
