--- a/art.html
+++ b/art.html
@@ -32,7 +32,7 @@
 		<div class="works-cover">
 			<div class="works-title-cover">
 				<a href="works_cs.html"><img src="images\art\cs\cs_01.png"/>
-				<div class="works-title"><p>Holocene<br/><br/>(WIP)</p></div></a>
+				<div class="works-title"><p>Cyber Security</p></div></a>
 			</div>
 			<div class="works-title-cover">
 				<a href="works_ho.html"><img src="images\art\cover\work_ho.jpg"/>
