--- a/art.html
+++ b/art.html
@@ -31,7 +31,7 @@
 
 		<div class="works-cover">
 			<div class="works-title-cover">
-				<a href="works_cs.html"><img src="images\art\cs\cs_01.png"/>
+				<a href="works_cs.html"><img src="images\art\cover\cs_01.png"/>
 				<div class="works-title"><p>Cyber Security</p></div></a>
 			</div>
 			<div class="works-title-cover">
