--- a/works_cs.html
+++ b/works_cs.html
@@ -32,10 +32,10 @@
     	<img src="images\art\cs\cs_02.png" width="900px">
      	<img src="images\art\cs\cs_06.png" width="900px">
       <img src="images\art\cs\cs_10.png" width="900px">
-      <img src="images\art\cs\cs_11.png" width="900px">
-      <img src="images\art\cs\cs_12.png" width="900px">
-      <img src="images\art\cs\cs_13.png" width="900px">
-      <img src="images\art\cs\cs_14.png" width="900px">
+      <img src="images\art\cs\cs_11.PNG" width="900px">
+      <img src="images\art\cs\cs_12.PNG" width="900px">
+      <img src="images\art\cs\cs_13.PNG" width="900px">
+      <img src="images\art\cs\cs_14.PNG" width="900px">
 
 
 	<br/><br/>
