--- a/works_cs.html
+++ b/works_cs.html
@@ -35,7 +35,7 @@
       <img src="images\art\cs\cs_11.PNG" width="900px">
       <img src="images\art\cs\cs_12.PNG" width="900px">
       <img src="images\art\cs\cs_13.PNG" width="900px">
-      <img src="images\art\cs\cs_14.PNG" width="900px">
+      <img src="images\art\cs\cs_14.png" width="900px">
 
 
 	<br/><br/>
