--- a/art.html
+++ b/art.html
@@ -35,6 +35,10 @@
 				<div class="works-title"><p>Cyber Security</p></div></a>
 			</div>
 			<div class="works-title-cover">
+				<a href="works_pl.html"><img src="images\art\cover\pl_.png"/>
+				<div class="works-title"><p>Cyber Security</p></div></a>
+			</div>
+			<div class="works-title-cover">
 				<a href="works_ho.html"><img src="images\art\cover\work_ho.jpg"/>
 				<div class="works-title"><p>Holocene<br/><br/>(WIP)</p></div></a>
 			</div>
