--- a/art.html
+++ b/art.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="works-title-cover">
 				<a href="works_pl.html"><img src="images\art\cover\pl_.png"/>
-				<div class="works-title"><p>Cyber Security</p></div></a>
+				<div class="works-title"><p>Procedual Road Experiment</p></div></a>
 			</div>
 			<div class="works-title-cover">
 				<a href="works_ho.html"><img src="images\art\cover\work_ho.jpg"/>
