--- a/works_vg.html
+++ b/works_vg.html
@@ -38,16 +38,16 @@
     </ul>
     <p>Behind the scenes:</p>
     <div id="vg-img">
-       <img src="images/works/vg/vg_01.jpg">
-       <img src="images/works/vg/vg_02.jpg">
-       <img src="images/works/vg/vg_03.jpg">
-       <img src="images/works/vg/vg_04.jpg">
-       <img src="images/works/vg/vg_05.jpg">
-       <img src="images/works/vg/vg_06.jpg">
-       <img src="images/works/vg/vg_07.jpg">
-       <img src="images/works/vg/vg_08.jpg">
-       <img src="images/works/vg/vg_09.jpg">
-       <img src="images/works/vg/vg_10.jpg">
+       <img src="images/art/vg/vg_01.jpg">
+       <img src="images/art/vg/vg_02.jpg">
+       <img src="images/art/vg/vg_03.jpg">
+       <img src="images/art/vg/vg_04.jpg">
+       <img src="images/art/vg/vg_05.jpg">
+       <img src="images/art/vg/vg_06.jpg">
+       <img src="images/art/vg/vg_07.jpg">
+       <img src="images/art/vg/vg_08.jpg">
+       <img src="images/art/vg/vg_09.jpg">
+       <img src="images/art/vg/vg_10.jpg">
     </div>
 
 </div>
