--- a/works_ho.html
+++ b/works_ho.html
@@ -27,7 +27,8 @@
 
 <div class="container">
 
-	<div class="works-container">  
+	<div class="works-container"> 
+   	<img src="images\art\ho\v2.3_test_.png" width="900px">
     	<img src="images\art\ho\ho_03.jpg" width="900px">
     	<img src="images\art\ho\ho_01.jpg" width="900px">
     	<img src="images\art\ho\ho_02.png" width="900px">
