Add Amber Spider

--- a/art.html
+++ b/art.html
@@ -35,6 +35,10 @@
 				<div class="works-title"><p>Cyber Security</p></div></a>
 			</div>
 			<div class="works-title-cover">
+				<a href="works_as.html"><img src="images\art\cover\as.png"/>
+				<div class="works-title"><p>Amber Spider</p></div></a>
+			</div>
+			<div class="works-title-cover">
 				<a href="works_pl.html"><img src="images\art\cover\pl_.png"/>
 				<div class="works-title"><p>Procedual Road Experiment</p></div></a>
 			</div>
