--- a/art.html
+++ b/art.html
@@ -32,7 +32,7 @@
 		<div class="works-cover">
 			<div class="works-title-cover">
 				<a href="works_cs.html"><img src="images\art\cover\cs_01.png"/>
-				<div class="works-title"><p>Cyber Security</p></div></a>
+				<div class="works-title"><p>Cyber Security Visualization</p></div></a>
 			</div>
 			<div class="works-title-cover">
 				<a href="works_as.html"><img src="images\art\cover\as.png"/>
