--- a/works_ho.html
+++ b/works_ho.html
@@ -32,9 +32,9 @@
     	<img src="images\art\ho\ho_03.jpg" width="900px">
     	<img src="images\art\ho\ho_01.jpg" width="900px">
     	<img src="images\art\ho\ho_02.png" width="900px">
-	<br/><br/>
-    <p>Holocene is a personal project I've been working on. It is an automobile commercial with a scene of coastal highway as well as forest. The performance of the car is just like a wolf...</p>
-    <p>The programs I used included Maya, Maya Bifrost, Houdini Ocean Toolkit and Speedtree. Rendered in V-Ray. Working in progress ...</p>
+	<br/><br/>    
+    <p>I'm trying to make some large-scale CG environment. The programs I used included Maya, Maya Bifrost, 
+    Houdini Ocean Toolkit and Speedtree. Rendered in V-Ray. Working in progress ...</p>
   	</div>
 
 </div>
