--- a/works_vg.html
+++ b/works_vg.html
@@ -45,9 +45,8 @@
        <img src="images/art/vg/vg_05.jpg">
        <img src="images/art/vg/vg_06.jpg">
        <img src="images/art/vg/vg_07.jpg">
-       <img src="images/art/vg/vg_08.jpg">
        <img src="images/art/vg/vg_09.jpg">
-       <img src="images/art/vg/vg_10.jpg">
+       <img src="images/art/vg/vg_10.JPG">
     </div>
 
 </div>
