--- a/art.html
+++ b/art.html
@@ -35,7 +35,7 @@
 				<div class="works-title"><p>Cyber Security Visualization</p></div></a>
 			</div>
 			<div class="works-title-cover">
-				<a href="works_as.html"><img src="images\art\cover\as.png"/>
+				<a href="works_as.html"><img src="images\art\cover\work_as.png"/>
 				<div class="works-title"><p>Amber Spider</p></div></a>
 			</div>
 			<div class="works-title-cover">
