--- a/art.html
+++ b/art.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="works-title-cover">
 				<a href="works_as.html"><img src="images\art\cover\work_as.png"/>
-				<div class="works-title"><p>Amber Spider</p><p>(WIP)</p></div></a>
+				<div class="works-title"><p>Amber Spider</p></br><p>(WIP)</p></div></a>
 			</div>
 			<div class="works-title-cover">
 				<a href="works_pl.html"><img src="images\art\cover\pl_.png"/>
