--- a/works_as.html
+++ b/works_as.html
@@ -27,13 +27,14 @@
 
 <div class="container">
 
-	<div class="works-container">  
-        <img src="images/art/as/v1.5_final_01.png" width="900px">
-        <img src="images/art/as/v1.5_final_02.png" width="900px">
-        <img src="images/art/as/v1.5_final_03.png" width="900px">
-        <img src="images/art/as/v1.5_final_04.png" width="900px">
-        <img src="images/art/as/Storyboard v2.png" width="900px">
-        <iframe src="https://player.vimeo.com/video/295851796?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<div class="works-container">
+      <img src="images/art/as/as_01.png" width="900px">
+      <img src="images/art/as/v1.5_final_01.png" width="900px">
+      <img src="images/art/as/v1.5_final_02.png" width="900px">
+      <img src="images/art/as/v1.5_final_03.png" width="900px">
+      <img src="images/art/as/v1.5_final_04.png" width="900px">
+      <img src="images/art/as/Storyboard v2.png" width="900px">
+      <iframe src="https://player.vimeo.com/video/295851796?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
     <br/>    
        
 	<br/><br/>
