--- a/works_as.html
+++ b/works_as.html
@@ -29,6 +29,7 @@
 
 	<div class="works-container">
       <img src="images/art/as/as_01.png" width="900px">
+      <img src="images/art/as/as_02.png" width="900px">
       <img src="images/art/as/v1.5_final_01.png" width="900px">
       <img src="images/art/as/v1.5_final_02.png" width="900px">
       <img src="images/art/as/v1.5_final_03.png" width="900px">
