--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 	
 
 <div class="container">
-	<iframe src="https://player.vimeo.com/video/305556988?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+	<div class="works-container">
+		<iframe src="https://player.vimeo.com/video/305556988?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-
+	</div>
 </div>
 
 <footer>
