--- a/art.html
+++ b/art.html
@@ -36,7 +36,7 @@
 			</div>
 			<div class="works-title-cover">
 				<a href="works_as.html"><img src="images\art\cover\work_as.png"/>
-				<div class="works-title"><p>Amber Spider</p></br><p>(WIP)</p></div></a>
+				<div class="works-title"><p>Amber Spider</p></div></a>
 			</div>
 			<div class="works-title-cover">
 				<a href="works_pl.html"><img src="images\art\cover\pl_.png"/>
@@ -58,27 +58,20 @@
 				<a href="works_lb.html"><img src="images\art\cover\work_lb.jpg"/>
 				<div class="works-title"><p>Laubwerk Plant Kit Test</p></div></a>
 			</div>
-			<div class="works-title-cover">
-				<a href="works_hb.html"><img src="images\art\cover\work_hb.jpg"/>
-				<div class="works-title"><p>Heart & Brain</p></div></a>
-			</div>
 						
 		</div>
 	
 	</div>
 
 	<footer>
-		<p>&copy;2018 Weny&uuml Zhang | All Rights Reserved</p>
+		<p>&copy;2019 Weny&uuml Zhang | All Rights Reserved</p>
 		
-		<div class="icons">
-			<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-			<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
+		<div class="icons">		
 			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
 			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
 			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
 			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-			<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
-		</div>
+		</div> 
 	</footer>
 
 </body>
