--- a/contact.html
+++ b/contact.html
@@ -25,26 +25,25 @@
 		</nav>   
 	</div>
 
-<div class="container">
+	<div class="container">
 
-<div ID="email">
-	<p><a href="mailto: zhangwenyu7@gmail.com">zhangwenyu7@gmail.com</a></p>
-</div>
-
-</div>
-
-<footer>
-	<p>&copy;2019 Wenyu Zhang | All Rights Reserved</p>
-	<div class="icons">
-		<a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-		<a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-		<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-		<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-		<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
-		<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-		<a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
+	<div ID="email">
+		<p><a href="mailto: zhangwenyu7@gmail.com">zhangwenyu7@gmail.com</a></p>
 	</div>
-</footer>
+
+	</div>
+
+	<footer>
+		<p>&copy;2019 Weny&uuml Zhang | All Rights Reserved</p>
+		
+		<div class="icons">		
+			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
+			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+		</div> 
+	</footer>
 
 </body>
+
 </html>
