--- a/works_sh.html
+++ b/works_sh.html
@@ -37,16 +37,15 @@
 </div>
 
 <footer>
-  <p>&copy;2019 Wenyu Zhang | All Rights Reserved</p>
-  <div class="icons">
-    <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-    <a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-    <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-    <a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-    <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
-    <a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-  </div>
-</footer>
+		<p>&copy;2019 Weny&uuml Zhang | All Rights Reserved</p>
+		
+		<div class="icons">		
+			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
+			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+		</div> 
+	</footer>
 
 </body>
 </html>
