--- a/works_ui.html
+++ b/works_ui.html
@@ -29,7 +29,7 @@
 	<div class="works-container">
 		<div id="mobile-app-img">
 			<img src="images\design\ui\ui_01.png"/>
-            <img src="images\design\ui\ui_02.PNG"/>
+      <img src="images\design\ui\ui_02.PNG"/>
 			<img src="images\design\ui\ui_03.PNG"/>
 			<img src="images\design\ui\ui_04.PNG"/>
 			<img src="images\design\ui\ui_05.PNG"/>
@@ -39,26 +39,21 @@
 			<img src="images\design\ui\ui_09.PNG"/>
 		</div>
         <p>My mobile app design is about an alarm product for private coach. It integrates alarms with personal schedule, which is useful for a fitness coach to manage his time and students information. Design document can be found <a href="files\Wenyu_App_Design.pdf" target="_blank">here</a>.</p>    
-	</div>
-	
-   
+	</div>   
   
   </div>
 
 </div>
-
 <footer>
-  <p>&copy;2018 Wenyu Zhang | All Rights Reserved</p>
-  <div class="icons">
-    <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-    <a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-    <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-    <a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-    <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
-    <a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-    <a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
-  </div>
-</footer>
+		<p>&copy;2019 Weny&uuml Zhang | All Rights Reserved</p>
+		
+		<div class="icons">		
+			<a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+			<a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
+			<a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+			<a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+		</div> 
+	</footer>
 
 </body>
 </html>
