--- a/works_cs.html
+++ b/works_cs.html
@@ -12,58 +12,57 @@
 
 <body>
 
-<div class="banner">
-	<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
-    <nav>
-	      <li><a href="home.html">HOME</a></li>     
-	      <li><a href="art.html">ART</a></li>
-	      <li><a href="programming.html">PROGRAMMING</a></li>
-	      <li><a href="design.html">DESIGN</a></li>
-	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	      <li><a href="about.html">ABOUT</a></li>
-	      <li><a href="contact.html">CONTACT</a></li>       
-	</nav>     
-</div>
+    <div class="banner">
+        <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
+        <nav>
+              <li><a href="home.html">HOME</a></li>     
+              <li><a href="art.html">ART</a></li>
+              <li><a href="programming.html">PROGRAMMING</a></li>
+              <li><a href="design.html">DESIGN</a></li>
+              <li><a href="photo.html">PHOTOGRAPHY</a></li>
+              <li><a href="about.html">ABOUT</a></li>
+              <li><a href="contact.html">CONTACT</a></li>       
+      </nav>     
+    </div>
 
-<div class="container">
+    <div class="container">
 
-<div class="works-container">
-<iframe src="https://player.vimeo.com/video/301972936?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <br/>
+    <div class="works-container">
+      
+    <iframe src="https://player.vimeo.com/video/301972936?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <br/>
 
-  <img src="images\art\cs\cs_15.png" width="900px">
-  <img src="images\art\cs\cs_10.png" width="900px">
-  <img src="images\art\cs\cs_11.PNG" width="900px">
-  <img src="images\art\cs\cs_12.PNG" width="900px">
-  <img src="images\art\cs\cs_13.PNG" width="900px">
-  <img src="images\art\cs\cs_01.png" width="900px">
-  <img src="images\art\cs\cs_02.png" width="900px">     	
-	<br/><br/>
-  <p>Cyber Security Visualization is a school project about developing an 
-  educational program for middle school students to learn the concept of computer network
-  and security. We developed this application using Unity game engine. I'm responsible for 
-  environment creation.</p>
+      <img src="images\art\cs\cs_15.png" width="900px">
+      <img src="images\art\cs\cs_10.png" width="900px">
+      <img src="images\art\cs\cs_11.PNG" width="900px">
+      <img src="images\art\cs\cs_12.PNG" width="900px">
+      <img src="images\art\cs\cs_13.PNG" width="900px">
+      <img src="images\art\cs\cs_01.png" width="900px">
+      <img src="images\art\cs\cs_02.png" width="900px">     	
+      <br/><br/>
+      <p>Cyber Security Visualization is a school project about developing an 
+      educational program for middle school students to learn the concept of computer network
+      and security. We developed this application using Unity game engine. I'm responsible for 
+      environment creation.</p>
 
-  <p>The concept is to make use of immersive learning environment to learn the fundamentals 
-  concept of cyber breach. The game we developed helps beginners to learn with use of 
-  interactive environment to build the basic concepts. </p>
+      <p>The concept is to make use of immersive learning environment to learn the fundamentals 
+      concept of cyber breach. The game we developed helps beginners to learn with use of 
+      interactive environment to build the basic concepts. </p>
 
-</div>
+    </div>
 
-</div>
+    </div>
 
-<footer>
-  <p>&copy;2018 Wenyu Zhang | All Rights Reserved</p>
-  <div class="icons">
-    <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
-    <a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
-    <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
-    <a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
-    <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
-    <a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
-    <a href="http://weibo.com/2775542052" class="fa fa-weibo" target="_blank"></a>
-  </div>
-</footer>
+    <footer>
+      <p>&copy;2019 Weny&uuml Zhang | All Rights Reserved</p>
+      
+      <div class="icons">		
+        <a href="https://vimeo.com/zhangvisual" class="fa fa-vimeo" target="_blank"></a>
+        <a href="https://www.linkedin.com/in/zhangvisual/" class="fa fa-linkedin" target="_blank"></a>
+        <a href="http://www.instagram.com/zhangvisual" class="fa fa-instagram" target="_blank"></a>
+        <a href="http://500px.com/zhangvisual" class="fa fa-500px" target="_blank"></a>
+      </div> 
+    </footer>
 
 </body>
 </html>
