--- a/art.html
+++ b/art.html
@@ -31,6 +31,10 @@
 
 		<div class="works-cover">
 			<div class="works-title-cover">
+				<a href="works_go.html"><img src="images\art\cover\work_go.png"/>
+				<div class="works-title"><p>Crowd Animation Perception Research</p></div></a>
+			</div>				
+			<div class="works-title-cover">
 				<a href="works_cs.html"><img src="images\art\cover\cs_01.png"/>
 				<div class="works-title"><p>Cyber Security Visualization</p></div></a>
 			</div>
