Added CS videos

--- a/programming.html
+++ b/programming.html
@@ -27,7 +27,11 @@
 
 	<div class="container">
 
-		<div class="works-cover">	
+		<div class="works-cover"></div>
+			<div class="works-title-cover">
+				<a href="works_nv.html"><img src="images\programming\cover\work_nv.jpg"/>
+				<div class="works-title"><p>Night Vision Effect</p></div></a>
+			</div>	
 			<div class="works-title-cover">
 				<a href="works_ms.html"><img src="images\programming\cover\work_ms.jpg"/>
 				<div class="works-title"><p>Make Some Noise</p></div></a>
