update CS intro

--- a/works_cs.html
+++ b/works_cs.html
@@ -34,24 +34,12 @@
         <iframe src="https://player.vimeo.com/video/338572093?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         <iframe src="https://player.vimeo.com/video/338572121?title=0&byline=0&portrait=0" width="900" height="507" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-        <br/>
+      <br/><br/><br/>
+      <p>Cyber Security Visualization is a project funded by NSF about cyber security
+      for high school students education. The purpose is to develop an interactive application to let students learn the concept of computer network
+      and security. We developed this program using Unity game engine. </p>
 
-        <img src="images\art\cs\cs_15.png" width="900px">
-        <img src="images\art\cs\cs_10.png" width="900px">
-        <img src="images\art\cs\cs_11.PNG" width="900px">
-        <img src="images\art\cs\cs_12.PNG" width="900px">
-        <img src="images\art\cs\cs_13.PNG" width="900px">
-        <img src="images\art\cs\cs_01.png" width="900px">
-        <img src="images\art\cs\cs_02.png" width="900px">     	
-      <br/><br/>
-      <p>Cyber Security Visualization is a school project about developing an 
-      educational program for middle school students to learn the concept of computer network
-      and security. We developed this application using Unity game engine. I'm responsible for 
-      environment creation.</p>
-
-      <p>The concept is to make use of immersive learning environment to learn the fundamentals 
-      concept of cyber breach. The game we developed helps beginners to learn with use of 
-      interactive environment to build the basic concepts. </p>
+      <p>I'm responsible for all aspects for this Collaborative Environment. </p>
 
     </div>
 
