--- a/works_ca.html
+++ b/works_ca.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -37,7 +37,7 @@
 </div>
 
 <footer>
-  <p>&copy;2018 Wenyu Zhang | All Rights Reserved</p>
+  <p>&copy;2020 Wenyu Zhang | All Rights Reserved</p>
   <div class="icons">
     <a href="https://www.facebook.com/lawrence.zhang.52" class="fa fa-facebook" target="_blank"></a>
     <a href="https://twitter.com/zhangvisual" class="fa fa-twitter" target="_blank"></a>
