Deleted Home page. Added a BLOG page.

--- a/works_au.html
+++ b/works_au.html
@@ -14,14 +14,13 @@
 <div class="banner">
 	<img src="images\banner\banner_new.png" class="title"/>
     <nav>
-        <li><a href="home.html">HOME</a></li>     
-        <li><a href="art.html">ART</a></li>
-        <li><a href="programming.html">PROGRAMMING</a></li>
-        <li><a href="design.html">DESIGN</a></li>
-        <li><a href="photo.html">PHOTOGRAPHY</a></li>
-        <li><a href="about.html">ABOUT</a></li>
-        <li><a href="contact.html">CONTACT</a></li>       
-	</nav>   
+	   <li><a href="art.html">ART</a></li>
+	   <li><a href="programming.html">PROGRAMMING</a></li>
+	   <li><a href="photo.html">PHOTOGRAPHY</a></li>
+	   <li><a href="blog.html">BLOG</a></li>
+	   <li><a href="about.html">ABOUT</a></li>
+	   <li><a href="contact.html">CONTACT</a></li>       
+	</nav>    
 </div>
 
 <div class="container">
