--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,10 @@
 		<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
 
 		<nav>
-	      <li><a href="home.html">HOME</a></li>     
 	      <li><a href="art.html">ART</a></li>
 	      <li><a href="programming.html">PROGRAMMING</a></li>
 	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
+		  <li><a href="blog.html">BLOG</a></li>
 	      <li><a href="about.html">ABOUT</a></li>
 	      <li><a href="contact.html">CONTACT</a></li>       
 		</nav>   
