--- a/works_vg.html
+++ b/works_vg.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
+	
 <head>
   <title>Weny&uuml Zhang | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -8,19 +9,21 @@
   <link href="css/master.css" rel="stylesheet" type="text/css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 </head>
+	
 <body>
-
-
-  <div class="banner">
-    <a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a><nav>
-	      <li><a href="home.html">HOME</a></li>     
-	      <li><a href="art.html">ART</a></li>
-	      <li><a href="programming.html">PROGRAMMING</a></li>
-	      <li><a href="design.html">DESIGN</a></li>
-	      <li><a href="photo.html">PHOTOGRAPHY</a></li>
-	      <li><a href="about.html">ABOUT</a></li>
-	      <li><a href="contact.html">CONTACT</a></li>       
-		</nav>   </div>
+	
+	<div class="banner">
+		<a href="http://www.wenyuzhang.com/"><img src="images\banner\banner_new.png" class="title"/></a>
+		
+		<nav>
+		   <li><a href="art.html">ART</a></li>
+		   <li><a href="programming.html">PROGRAMMING</a></li>
+		   <li><a href="photo.html">PHOTOGRAPHY</a></li>
+		   <li><a href="blog.html">BLOG</a></li>
+		   <li><a href="about.html">ABOUT</a></li>
+		   <li><a href="contact.html">CONTACT</a></li>       
+		</nav>   
+	</div>
 
 <div class="container">
 
